# living-agents

./: .gitignore  CLAUDE.md  README.md  cli.py  living-agent-spec.md  main.py  pyproject.toml
config/: settings.py
conversation/: __init__.py  context_builder.py  engine.py  reflection.py
core/: __init__.py  agent.py  character.py  expertise.py  identity.py  token_tracker.py
creation/: __init__.py  genesis.py
memory/: __init__.py  database.py  episodic.py  semantic.py  store.py  working.py
ui/: __init__.py  god_mode.py  participant_mode.py  terminal_app.py  widgets.py
world/: __init__.py  message_bus.py  orchestrator.py  registry.py  shared_state.py
